terraform fixes, integration guide, and all other local changes as of July 18